All files uploaded successfully.

--- a/Task-3 (Temperature Converter Website)/index.html
+++ b/Task-3 (Temperature Converter Website)/index.html
@@ -15,13 +15,13 @@
         <h2>TEMPERATURE CONVERTER</h2>
         <label for="fromUnit"><strong>From</strong></label>
         <select id="fromUnit">
-            <option value="C">CELCIUS</option>
+            <option value="C">CELSIUS</option>
             <option value="F">FAHRENHEIT</option>
             <option value="K">KELVIN</option>
         </select>
         <label for="toUnit"><strong>To</strong></label>
         <select id="toUnit">
-            <option value="C">CELCIUS</option>
+            <option value="C">CELSIUS</option>
             <option value="F">FAHRENHEIT</option>
             <option value="K">KELVIN</option>
         </select>
